validator_derive_tests/tests/compile-fail/custom/different_lifetime.stderr
error: Invalid argument reference
 --> tests/compile-fail/custom/different_lifetime.rs:8:22
  |
8 | #[validate(context = "Arg<'a>")]
  |                      ^^^^^^^^^
  |
  = note: The lifetime `'a` is not supported.
  = help: Please use the validator lifetime `'v_a`
